# simulatedFactory

./: CMakeLists.txt  Config.json  install_adslib.sh
cmake/: FindAdsLib.cmake
src/: AdsVariableList.h  Framework.cpp  Framework.h  main.cpp  stdMachines.h
src/osSpecific/: LinuxSpecific.h
